--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.8.3",
         "body-parser": "^1.20.3",
         "express": "^4.21.2",
-        "firebase-admin": "^13.2.0"
+        "firebase-admin": "^13.2.0",
+        "paddle": "^1.0.0"
     }
 }
