--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@paddle/paddle-node-sdk": "^2.5.1",
         "axios": "^1.8.3",
         "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
         "express": "^4.21.2",
         "firebase-admin": "^13.2.0",
         "paddle": "^1.0.0"
