--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "firebase-admin": "^13.2.0",
         "multer": "^2.0.2",
         "paddle": "^1.0.0",
+        "svg2ttf": "^6.0.3",
+        "svgicons2svgfont": "^15.0.1",
         "svgtofont": "^6.4.0"
     }
 }
